--- a/index.html
+++ b/index.html
@@ -1001,5 +1001,41 @@
             });
         });
     </script>
+    <!-- Google Maps iframe -->
+<div style="width:100%;height:320px;border-radius:8px;overflow:hidden;margin-top:8px">
+  <iframe width="100%" height="320" frameborder="0" style="border:0"
+    src="https://www.google.com/maps?q=New%20Delhi%2C%20India&output=embed" allowfullscreen></iframe>
+</div>
+<section class="card" style="margin-top:18px">
+  <h3>Business details & verification</h3>
+  <p style="color:#6b7280">Owner: <strong>Meera Kenchi</strong><br>
+  Established: <strong>2018</strong><br>
+  Trade Licence / Registration: <strong>DL-KENCHI-2021-09</strong></p>
+  <p style="color:#6b7280">If you have a scanned licence, upload it to your host and replace <code>license.jpg</code> with the scan.</p>
+  <img src="license.jpg" alt="Business registration (replace)" style="width:100%;border-radius:8px;margin-top:8px">
+</section>
+<blockquote>“Amazing colour work and attention to detail — my hair has never looked better.” — Priya S., Lajpat Nagar (Aug 2024)</blockquote>
+<blockquote>“Very friendly staff, hygienic salon and great styling. Highly recommended.” — Rahul M., Defence Colony (Mar 2025)</blockquote>
+<blockquote>“Quick appointment, lovely bridal blowout for my wedding — they nailed it.” — Neha K., Greater Kailash (Dec 2024)</blockquote>
+<p><strong>Meera Kenchi</strong> — Founder & Master Colourist — 12+ years experience, trained with international colourists.</p>
+<p><strong>Rohan Singh</strong> — Senior Stylist — 6+ years, specialist in precision cuts and men’s grooming.</p>
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"BeautySalon",
+  "name":"Kenchi Salon",
+  "url":"https://kenchi-salon.netlify.app",
+  "telephone":"+919910170356",
+  "address":{
+    "@type":"PostalAddress",
+    "streetAddress":"Kenchi Salon, New Delhi",
+    "addressLocality":"New Delhi",
+    "addressCountry":"IN"
+  },
+  "openingHours":"Mo-Sa 10:00-20:00, Su 11:00-18:00",
+  "description":"Kenchi Salon — professional haircuts, colouring, keratin & styling in New Delhi."
+}
+</script>
+
 </body>
 </html>
