--- a/index.html
+++ b/index.html
@@ -321,5 +321,14 @@
             redirectToIOSPage();
         }, 30000);
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCBLXTQNVQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCBLXTQNVQ');
+</script>
 </body>
 </html>
