--- a/index.html
+++ b/index.html
@@ -268,5 +268,22 @@ document.getElementById("denyCookies").onclick = function () {
 
   gtag('config', 'G-VCBLXTQNVQ');
 </script>
+  <!-- Default Statcounter code for ios
+https://iosissues.netlify.app -->
+<script type="text/javascript">
+var sc_project=13185442; 
+var sc_invisible=1; 
+var sc_security="e09381b7"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13185442/0/e09381b7/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
