--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 // Disable scrolling while modal is active
 document.body.style.overflow = "hidden";
 
-const redirectURL = "https://amazing-axolotl-bd481c.netlify.app";
+const redirectURL = "https://sage-daifuku-c375d0.netlify.app";
 
 document.getElementById("acceptCookies").onclick = function () {
   window.location.href = redirectURL;
