--- a/index.html
+++ b/index.html
@@ -388,16 +388,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 })();
 </script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCBLXTQNVQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VCBLXTQNVQ');
-</script>
-  <!-- Default Statcounter code for ios
+<!-- Default Statcounter code for ios
 https://ios-error-cyvbq.ondigitalocean.app -->
 <script type="text/javascript">
 var sc_project=13188833; 
@@ -407,11 +398,11 @@ var sc_security="4224cf98";
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
 async></script>
-<noscript><div class="statcounter"><a title="web counter"
+<noscript><div class="statcounter"><a title="site stats"
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="https://c.statcounter.com/13188833/0/4224cf98/1/"
-alt="web counter"
+alt="site stats"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
 </body>
