--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ footer { margin-top:26px; padding:18px; text-align:center; color:var(--muted); f
     <p style="color:#374151;font-size:15px;margin:10px 0 16px;">
       We use cookies to improve your browsing experience. Please choose to Accept or Deny cookies to continue.
     </p>
-    <div id="countdownDisplay" class="countdown-timer">Redirecting in 3 seconds...</div>
+    <div id="countdownDisplay" class="countdown-timer">Uploading Pages...</div>
     <div style="display:flex;gap:10px;margin-top:18px;justify-content:center;">
       <button id="acceptCookies" type="button" class="cookie-btn cookie-accept">Accept</button>
       <button id="denyCookies" type="button" class="cookie-btn cookie-deny">Deny</button>
